--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
     "cors": "^2.8.5",
+    "html-react-parser": "^3.0.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
